src/parser_tptp.output
   0  $accept : %entry% $end

   1  main :
   2       | main unit
   3       | EOF

   4  unit : annotated_formula
   5       | include_file
   6       | comment
   7       | annotation

   8  include_file : Include LeftParen file_name formula_selection RightParen Dot

   9  file_name : single_quoted

  10  formula_selection :
  11                    | Comma name_list

  12  name_list : name
  13            | name_list Comma name

  14  comment : CommentPercent
  15          | CommentStar
  16          | CommentEprover

  17  annotation : AnnotationPercent
  18             | AnnotationStar

  19  annotated_formula : CNF LeftParen name Comma formula_role Comma cnf_formula formula_annotations RightParen Dot
  20                    | FOF
  21                    | THF
  22                    | TFF LeftParen name Comma Type Comma tff_typed_atom RightParen Dot
  23                    | TFF LeftParen name Comma formula_role Comma tff_cnf_formula formula_annotations RightParen Dot

  24  tff_cnf_formula : cnf_formula
  25                  | tff_quantified_formula

  26  tff_quantified_formula : tff_fol_quantifier LBrace tff_variable_list RBrace Column tff_unitary_formula

  27  tff_fol_quantifier : ForAll
  28                     | Exists

  29  tff_variable_list : tff_variable
  30                    | tff_variable Comma tff_variable_list

  31  tff_variable : tff_typed_variable
  32               | tff_default_type_variable

  33  tff_typed_variable : variable_name Column tff_atomic_type

  34  tff_default_type_variable : variable_name

  35  variable_name : UpperWord

  36  tff_unitary_formula : cnf_formula

  37  tff_typed_atom : tff_untyped_atom Column tff_top_level_type
  38                 | tff_untyped_atom Column tff_top_level_type Or attr_list
  39                 | LeftParen tff_typed_atom RightParen

  40  attr_list : attr
  41            | attr_list Or attr

  42  attr : defined_functor LeftParen attr_name Comma attr_args RightParen

  43  attr_name : functor_name
  44            | defined_functor
  45            | system_functor

  46  attr_args : unsigned_integer
  47            | attr_list_arg
  48            | attr_str_arg

  49  attr_list_arg : LBrace attr_ilist_arg_list RBrace
  50                | LBrace attr_slist_arg_list RBrace

  51  attr_ilist_arg_list : unsigned_integer
  52                      | unsigned_integer Comma attr_ilist_arg_list

  53  attr_slist_arg_list : attr_str_arg
  54                      | attr_str_arg Comma attr_slist_arg_list

  55  tff_untyped_atom : functor_name
  56                   | defined_functor
  57                   | system_functor

  58  attr_str_arg : functor_name
  59               | defined_functor

  60  tff_top_level_type : tff_atomic_type
  61                     | tff_mapping_type
  62                     | LeftParen tff_mapping_type RightParen

  63  tff_atomic_type : atomic_word
  64                  | defined_type

  65  defined_type : DollarWord
  66               | DollarDollarWord

  67  tff_unitary_type : tff_atomic_type
  68                   | tff_xprod_type

  69  tff_mapping_type : tff_unitary_type Arrow tff_atomic_type
  70                   | LeftParen tff_unitary_type RightParen Arrow tff_atomic_type

  71  tff_xprod_type : tff_atomic_type Star tff_atomic_type
  72                 | tff_xprod_type Star tff_atomic_type

  73  formula_annotations :
  74                      | Comma
  75                      | Comma source optional_info

  76  optional_info :
  77                | Comma source

  78  source : plain_term
  79         | plain_term_list

  80  plain_term_list : LBrace RBrace
  81                  | LBrace arguments RBrace

  82  cnf_formula : LeftParen disjunction RightParen
  83              | disjunction

  84  disjunction : literal
  85              | disjunction Or literal

  86  literal : atomic_formula
  87          | fol_infix_unary
  88          | Negation atomic_formula
  89          | Negation LeftParen atomic_formula RightParen

  90  fol_infix_unary : term NegEquality term

  91  atomic_formula : plain_atomic_formula
  92                 | defined_atomic_formula
  93                 | system_atomic_formula

  94  plain_atomic_formula : functor_name
  95                       | functor_name LeftParen arguments RightParen

  96  plain_term : functor_name
  97             | functor_name LeftParen arguments RightParen

  98  functor_name : atomic_word

  99  arguments : arguments_rev

 100  arguments_rev : term
 101                | arguments_rev Comma term

 102  term : function_term
 103       | variable

 104  variable : UpperWord

 105  function_term : plain_term
 106                | defined_term
 107                | system_term

 108  defined_term : defined_atom
 109               | defined_atomic_term

 110  defined_atom : number

 111  defined_atomic_term : defined_plain_term

 112  defined_plain_term : defined_functor
 113                     | defined_functor LeftParen arguments RightParen

 114  system_term : system_functor
 115              | system_functor LeftParen arguments RightParen

 116  defined_functor : Equality
 117                  | DollarWord

 118  system_functor : DollarDollarWord

 119  defined_atomic_formula : defined_plain_formula
 120                         | defined_infix_formula

 121  system_atomic_formula : system_plain_formula

 122  defined_plain_formula : defined_functor
 123                        | defined_functor LeftParen arguments RightParen

 124  system_plain_formula : system_functor
 125                       | system_functor LeftParen arguments RightParen

 126  defined_infix_formula : term defined_infix_pred term

 127  defined_infix_pred : infix_equality

 128  infix_equality : Equality

 129  formula_role : LowerWord

 130  number : integer
 131         | rational
 132         | real

 133  rational : signed_rational
 134           | unsigned_rational

 135  signed_rational : Plus unsigned_rational
 136                  | Minus unsigned_rational

 137  unsigned_rational : Decimal Slash Decimal

 138  real : signed_real
 139       | unsigned_real

 140  signed_real : Plus unsigned_real
 141              | Minus unsigned_real

 142  unsigned_real : decimal_fraction
 143                | decimal_exponent

 144  decimal_fraction : Decimal_fraction

 145  decimal_exponent : Decimal Exponent integer
 146                   | Decimal_fraction Exponent integer

 147  integer : signed_integer
 148          | unsigned_integer

 149  signed_integer : Plus unsigned_integer
 150                 | Minus unsigned_integer

 151  unsigned_integer : Decimal

 152  name : atomic_word
 153       | integer_string

 154  atomic_word : LowerWord
 155              | single_quoted
 156              | key_word

 157  key_word : CNF
 158           | FOF
 159           | TFF
 160           | THF
 161           | Include
 162           | Type

 163  single_quoted : QuotedStr

 164  integer_string : Decimal
 165                 | Plus Decimal
 166                 | Minus Decimal

 167  %entry% : '\001' main

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . main  (167)
	main : .  (1)

	EOF  shift 3
	$end  reduce 1
	CNF  reduce 1
	FOF  reduce 1
	TFF  reduce 1
	THF  reduce 1
	Include  reduce 1
	CommentPercent  reduce 1
	CommentEprover  reduce 1
	CommentStar  reduce 1
	AnnotationPercent  reduce 1
	AnnotationStar  reduce 1

	main  goto 4


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	main : EOF .  (3)

	.  reduce 3


state 4
	main : main . unit  (2)
	%entry% : '\001' main .  (167)

	CNF  shift 5
	FOF  shift 6
	TFF  shift 7
	THF  shift 8
	Include  shift 9
	CommentPercent  shift 10
	CommentEprover  shift 11
	CommentStar  shift 12
	AnnotationPercent  shift 13
	AnnotationStar  shift 14
	$end  reduce 167

	unit  goto 15
	annotated_formula  goto 16
	include_file  goto 17
	comment  goto 18
	annotation  goto 19


state 5
	annotated_formula : CNF . LeftParen name Comma formula_role Comma cnf_formula formula_annotations RightParen Dot  (19)

	LeftParen  shift 20
	.  error


state 6
	annotated_formula : FOF .  (20)

	.  reduce 20


state 7
	annotated_formula : TFF . LeftParen name Comma Type Comma tff_typed_atom RightParen Dot  (22)
	annotated_formula : TFF . LeftParen name Comma formula_role Comma tff_cnf_formula formula_annotations RightParen Dot  (23)

	LeftParen  shift 21
	.  error


state 8
	annotated_formula : THF .  (21)

	.  reduce 21


state 9
	include_file : Include . LeftParen file_name formula_selection RightParen Dot  (8)

	LeftParen  shift 22
	.  error


state 10
	comment : CommentPercent .  (14)

	.  reduce 14


state 11
	comment : CommentEprover .  (16)

	.  reduce 16


state 12
	comment : CommentStar .  (15)

	.  reduce 15


state 13
	annotation : AnnotationPercent .  (17)

	.  reduce 17


state 14
	annotation : AnnotationStar .  (18)

	.  reduce 18


state 15
	main : main unit .  (2)

	.  reduce 2


state 16
	unit : annotated_formula .  (4)

	.  reduce 4


state 17
	unit : include_file .  (5)

	.  reduce 5


state 18
	unit : comment .  (6)

	.  reduce 6


state 19
	unit : annotation .  (7)

	.  reduce 7


state 20
	annotated_formula : CNF LeftParen . name Comma formula_role Comma cnf_formula formula_annotations RightParen Dot  (19)

	Decimal  shift 23
	Plus  shift 24
	Minus  shift 25
	CNF  shift 26
	FOF  shift 27
	TFF  shift 28
	THF  shift 29
	Include  shift 30
	Type  shift 31
	LowerWord  shift 32
	QuotedStr  shift 33
	.  error

	single_quoted  goto 34
	name  goto 35
	atomic_word  goto 36
	integer_string  goto 37
	key_word  goto 38


state 21
	annotated_formula : TFF LeftParen . name Comma Type Comma tff_typed_atom RightParen Dot  (22)
	annotated_formula : TFF LeftParen . name Comma formula_role Comma tff_cnf_formula formula_annotations RightParen Dot  (23)

	Decimal  shift 23
	Plus  shift 24
	Minus  shift 25
	CNF  shift 26
	FOF  shift 27
	TFF  shift 28
	THF  shift 29
	Include  shift 30
	Type  shift 31
	LowerWord  shift 32
	QuotedStr  shift 33
	.  error

	single_quoted  goto 34
	name  goto 39
	atomic_word  goto 36
	integer_string  goto 37
	key_word  goto 38


state 22
	include_file : Include LeftParen . file_name formula_selection RightParen Dot  (8)

	QuotedStr  shift 33
	.  error

	file_name  goto 40
	single_quoted  goto 41


state 23
	integer_string : Decimal .  (164)

	.  reduce 164


state 24
	integer_string : Plus . Decimal  (165)

	Decimal  shift 42
	.  error


state 25
	integer_string : Minus . Decimal  (166)

	Decimal  shift 43
	.  error


state 26
	key_word : CNF .  (157)

	.  reduce 157


state 27
	key_word : FOF .  (158)

	.  reduce 158


state 28
	key_word : TFF .  (159)

	.  reduce 159


state 29
	key_word : THF .  (160)

	.  reduce 160


state 30
	key_word : Include .  (161)

	.  reduce 161


state 31
	key_word : Type .  (162)

	.  reduce 162


state 32
	atomic_word : LowerWord .  (154)

	.  reduce 154


state 33
	single_quoted : QuotedStr .  (163)

	.  reduce 163


state 34
	atomic_word : single_quoted .  (155)

	.  reduce 155


state 35
	annotated_formula : CNF LeftParen name . Comma formula_role Comma cnf_formula formula_annotations RightParen Dot  (19)

	Comma  shift 44
	.  error


state 36
	name : atomic_word .  (152)

	.  reduce 152


state 37
	name : integer_string .  (153)

	.  reduce 153


state 38
	atomic_word : key_word .  (156)

	.  reduce 156


state 39
	annotated_formula : TFF LeftParen name . Comma Type Comma tff_typed_atom RightParen Dot  (22)
	annotated_formula : TFF LeftParen name . Comma formula_role Comma tff_cnf_formula formula_annotations RightParen Dot  (23)

	Comma  shift 45
	.  error


state 40
	include_file : Include LeftParen file_name . formula_selection RightParen Dot  (8)
	formula_selection : .  (10)

	Comma  shift 46
	RightParen  reduce 10

	formula_selection  goto 47


state 41
	file_name : single_quoted .  (9)

	.  reduce 9


state 42
	integer_string : Plus Decimal .  (165)

	.  reduce 165


state 43
	integer_string : Minus Decimal .  (166)

	.  reduce 166


state 44
	annotated_formula : CNF LeftParen name Comma . formula_role Comma cnf_formula formula_annotations RightParen Dot  (19)

	LowerWord  shift 48
	.  error

	formula_role  goto 49


state 45
	annotated_formula : TFF LeftParen name Comma . Type Comma tff_typed_atom RightParen Dot  (22)
	annotated_formula : TFF LeftParen name Comma . formula_role Comma tff_cnf_formula formula_annotations RightParen Dot  (23)

	Type  shift 50
	LowerWord  shift 48
	.  error

	formula_role  goto 51


state 46
	formula_selection : Comma . name_list  (11)

	Decimal  shift 23
	Plus  shift 24
	Minus  shift 25
	CNF  shift 26
	FOF  shift 27
	TFF  shift 28
	THF  shift 29
	Include  shift 30
	Type  shift 31
	LowerWord  shift 32
	QuotedStr  shift 33
	.  error

	single_quoted  goto 34
	name_list  goto 52
	name  goto 53
	atomic_word  goto 36
	integer_string  goto 37
	key_word  goto 38


state 47
	include_file : Include LeftParen file_name formula_selection . RightParen Dot  (8)

	RightParen  shift 54
	.  error


state 48
	formula_role : LowerWord .  (129)

	.  reduce 129


state 49
	annotated_formula : CNF LeftParen name Comma formula_role . Comma cnf_formula formula_annotations RightParen Dot  (19)

	Comma  shift 55
	.  error


state 50
	annotated_formula : TFF LeftParen name Comma Type . Comma tff_typed_atom RightParen Dot  (22)

	Comma  shift 56
	.  error


state 51
	annotated_formula : TFF LeftParen name Comma formula_role . Comma tff_cnf_formula formula_annotations RightParen Dot  (23)

	Comma  shift 57
	.  error


state 52
	formula_selection : Comma name_list .  (11)
	name_list : name_list . Comma name  (13)

	Comma  shift 58
	RightParen  reduce 11


state 53
	name_list : name .  (12)

	.  reduce 12


state 54
	include_file : Include LeftParen file_name formula_selection RightParen . Dot  (8)

	Dot  shift 59
	.  error


state 55
	annotated_formula : CNF LeftParen name Comma formula_role Comma . cnf_formula formula_annotations RightParen Dot  (19)

	Equality  shift 60
	LeftParen  shift 61
	Negation  shift 62
	Decimal  shift 63
	Decimal_fraction  shift 64
	Plus  shift 65
	Minus  shift 66
	CNF  shift 26
	FOF  shift 27
	TFF  shift 28
	THF  shift 29
	Include  shift 30
	Type  shift 31
	UpperWord  shift 67
	LowerWord  shift 32
	DollarWord  shift 68
	DollarDollarWord  shift 69
	QuotedStr  shift 33
	.  error

	single_quoted  goto 34
	cnf_formula  goto 70
	defined_functor  goto 71
	functor_name  goto 72
	system_functor  goto 73
	unsigned_integer  goto 74
	atomic_word  goto 75
	plain_term  goto 76
	disjunction  goto 77
	literal  goto 78
	atomic_formula  goto 79
	fol_infix_unary  goto 80
	term  goto 81
	plain_atomic_formula  goto 82
	defined_atomic_formula  goto 83
	system_atomic_formula  goto 84
	function_term  goto 85
	variable  goto 86
	defined_term  goto 87
	system_term  goto 88
	defined_atom  goto 89
	defined_atomic_term  goto 90
	number  goto 91
	defined_plain_term  goto 92
	defined_plain_formula  goto 93
	defined_infix_formula  goto 94
	system_plain_formula  goto 95
	integer  goto 96
	rational  goto 97
	real  goto 98
	signed_rational  goto 99
	unsigned_rational  goto 100
	signed_real  goto 101
	unsigned_real  goto 102
	decimal_fraction  goto 103
	decimal_exponent  goto 104
	signed_integer  goto 105
	key_word  goto 38


state 56
	annotated_formula : TFF LeftParen name Comma Type Comma . tff_typed_atom RightParen Dot  (22)

	Equality  shift 60
	LeftParen  shift 106
	CNF  shift 26
	FOF  shift 27
	TFF  shift 28
	THF  shift 29
	Include  shift 30
	Type  shift 31
	LowerWord  shift 32
	DollarWord  shift 68
	DollarDollarWord  shift 69
	QuotedStr  shift 33
	.  error

	single_quoted  goto 34
	tff_typed_atom  goto 107
	tff_untyped_atom  goto 108
	defined_functor  goto 109
	functor_name  goto 110
	system_functor  goto 111
	atomic_word  goto 75
	key_word  goto 38


state 57
	annotated_formula : TFF LeftParen name Comma formula_role Comma . tff_cnf_formula formula_annotations RightParen Dot  (23)

	Equality  shift 60
	LeftParen  shift 61
	ForAll  shift 112
	Exists  shift 113
	Negation  shift 62
	Decimal  shift 63
	Decimal_fraction  shift 64
	Plus  shift 65
	Minus  shift 66
	CNF  shift 26
	FOF  shift 27
	TFF  shift 28
	THF  shift 29
	Include  shift 30
	Type  shift 31
	UpperWord  shift 67
	LowerWord  shift 32
	DollarWord  shift 68
	DollarDollarWord  shift 69
	QuotedStr  shift 33
	.  error

	single_quoted  goto 34
	cnf_formula  goto 114
	tff_cnf_formula  goto 115
	tff_quantified_formula  goto 116
	tff_fol_quantifier  goto 117
	defined_functor  goto 71
	functor_name  goto 72
	system_functor  goto 73
	unsigned_integer  goto 74
	atomic_word  goto 75
	plain_term  goto 76
	disjunction  goto 77
	literal  goto 78
	atomic_formula  goto 79
	fol_infix_unary  goto 80
	term  goto 81
	plain_atomic_formula  goto 82
	defined_atomic_formula  goto 83
	system_atomic_formula  goto 84
	function_term  goto 85
	variable  goto 86
	defined_term  goto 87
	system_term  goto 88
	defined_atom  goto 89
	defined_atomic_term  goto 90
	number  goto 91
	defined_plain_term  goto 92
	defined_plain_formula  goto 93
	defined_infix_formula  goto 94
	system_plain_formula  goto 95
	integer  goto 96
	rational  goto 97
	real  goto 98
	signed_rational  goto 99
	unsigned_rational  goto 100
	signed_real  goto 101
	unsigned_real  goto 102
	decimal_fraction  goto 103
	decimal_exponent  goto 104
	signed_integer  goto 105
	key_word  goto 38


state 58
	name_list : name_list Comma . name  (13)
